--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Сашко</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/Alex-web2712/Sashko-AI/main/style.css">
 </head>
 <body>
     <div class="container">
@@ -16,6 +16,6 @@
         <button onclick="askQuestion()">Попитай</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="https://raw.githubusercontent.com/Alex-web2712/Sashko-AI/main/script.js"></script>
 </body>
 </html>
