--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Сашко</title>
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/Alex-web2712/Sashko-AI/main/style.css">
+    <link rel="stylesheet" href="https://my-chatbot.alex-r-goranov1.workers.dev/style.css">
 </head>
 <body>
     <div class="container">
@@ -15,7 +15,6 @@
         <input type="text" id="questionInput" placeholder="Напишете въпрос..." />
         <button onclick="askQuestion()">Попитай</button>
     </div>
-
-    <script src="https://raw.githubusercontent.com/Alex-web2712/Sashko-AI/main/script.js"></script>
+    <script src="https://my-chatbot.alex-r-goranov1.workers.dev/script.js"></script>
 </body>
 </html>
