--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Сашко</title>
+    <title>My New AI</title>
     <link rel="stylesheet" href="https://my-chatbot.alex-r-goranov1.workers.dev/style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Добре дошъл в твоя Сашко AI!</h1>
+        <h1>Welcome to my new AI!</h1>
         <div id="chatbox">
             <div id="responses"></div> <!-- Място за отговорите -->
         </div>
         <input type="text" id="questionInput" placeholder="Напишете въпрос..." />
-        <button onclick="askQuestion()">Попитай</button>
+        <button onclick="askQuestion()">Ask me</button>
     </div>
     <script src="https://my-chatbot.alex-r-goranov1.workers.dev/script.js"></script>
 </body>
