--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="chatbox">
             <div id="responses"></div> <!-- Място за отговорите -->
         </div>
-        <input type="text" id="questionInput" placeholder="Напишете въпрос..." />
+        <input type="text" id="questionInput" placeholder="Ask me something..." />
         <button onclick="askQuestion()">Ask me</button>
     </div>
     <script src="https://my-chatbot.alex-r-goranov1.workers.dev/script.js"></script>
